vpc-with-application-load-balancer/VPC-With-Application-Load-Balancer-CF-Template.yml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Network Configuration
        Parameters:
          - KeyPairName
          - TomcatAMI
    ParameterLabels:
      KeyPairName:
        default: Key Pair Name
      TomcatAMI:
        default: Tomcat AMI ID
Parameters:
  KeyPairName:
    Description: >-
      The key pair to establish a SSH connection to the servers. This should
      be already created.
    Type: 'AWS::EC2::KeyPair::KeyName'
  TomcatAMI:
    Type: String
    Default: ami-2a22014f
Resources:
  # Create VPC and subnets
  XEnvVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'false'
      Tags:
        - Key: Name
          Value: XEnvVPC
  XEnvPrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select 
        - '0'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPrivateSubnet1
  XEnvPrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select 
        - '1'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPrivateSubnet2
  XEnvPublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.254.0/24
      AvailabilityZone: !Select 
        - '0'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPublicSubnet1
  XEnvPublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.252.0/24
      AvailabilityZone: !Select 
        - '1'
        - !GetAZs ''
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPublicSubnet2
  # Attach an internet gateway to the VPC for allowing traffic to the public 
  # subnets from the internet
  XEnvInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: XEnvInternetGateway
  XEnvVPCInternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref XEnvVPC
      InternetGatewayId: !Ref XEnvInternetGateway
  # Define public route table for connecting the internet gateway 
  # and public subnets
  XEnvPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPublicRouteTable
  XEnvPublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPublicRouteTable
      SubnetId: !Ref XEnvPublicSubnet2
  XEnvPublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPublicRouteTable
      SubnetId: !Ref XEnvPublicSubnet1
  XEnvInternetGatewayPublicRouteTableRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref XEnvPublicRouteTable
      GatewayId: !Ref XEnvInternetGateway
    DependsOn: XEnvInternetGateway
  # Definte private route table for configuring routing for private subnets
  XEnvPrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref XEnvVPC
      Tags:
        - Key: Name
          Value: XEnvPrivateRouteTable
  XEnvPrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPrivateRouteTable
      SubnetId: !Ref XEnvPrivateSubnet2
  XEnvPrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref XEnvPrivateRouteTable
      SubnetId: !Ref XEnvPrivateSubnet1
  # Create EC2 instances
  XEnvPublicEC2Instance1:
    Type: 'AWS::EC2::Instance' 
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          sudo systemctl start tomcat
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: XEnvPublicEC2Instance1
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref XEnvPublicSubnet1
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.254.101
              Primary: 'true'
          GroupSet:
            - !Ref XEnvPublicEC2InstanceSecurityGroup
          AssociatePublicIpAddress: 'true'
  XEnvPublicEC2Instance2:
    Type: 'AWS::EC2::Instance'
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          sudo systemctl start tomcat
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: XEnvPublicEC2Instance2
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref XEnvPublicSubnet2
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.252.102
              Primary: 'true'
          GroupSet:
            - !Ref XEnvPublicEC2InstanceSecurityGroup
          AssociatePublicIpAddress: 'true'
  XEnvPrivateEC2Instance1:
    Type: 'AWS::EC2::Instance'
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          sudo systemctl start tomcat
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: XEnvPrivateEC2Instance1
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref XEnvPrivateSubnet1
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.1.101
              Primary: 'true'
          GroupSet:
            - !Ref XEnvPrivateEC2InstanceSecurityGroup
          AssociatePublicIpAddress: 'false'
  XEnvPrivateEC2Instance2:
    Type: 'AWS::EC2::Instance'
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          sudo systemctl start tomcat
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !Ref TomcatAMI
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: XEnvPrivateEC2Instance2
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref XEnvPrivateSubnet2
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.2.102
              Primary: 'true'
          GroupSet:
            - !Ref XEnvPrivateEC2InstanceSecurityGroup
          AssociatePublicIpAddress: 'false'
  # Define EC2 instance security groups
  XEnvPublicEC2InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref XEnvVPC
      GroupDescription: Public EC2 instance security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
  XEnvPrivateEC2InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref XEnvVPC
      GroupDescription: Private EC2 instance security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
  # Add application load balancer
  XEnvAppLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets:
        - Ref: XEnvPublicSubnet1
        - Ref: XEnvPublicSubnet2
      SecurityGroups:
        - Ref: XEnvAppLoadBalancerSecurityGroup
  XEnvAppLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: XEnvAppLoadBalancerTargetGroup
      LoadBalancerArn:
        Ref: XEnvAppLoadBalancer
      Port: 80
      Protocol: HTTP
  XEnvAppLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      Name: XEnvAppLoadBalancerTargetGroup
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '20'
      Targets:
      - Id:
          Ref: XEnvPublicEC2Instance1
        Port: 8080
      - Id:
          Ref: XEnvPublicEC2Instance2
        Port: 8080
      - Id:
          Ref: XEnvPrivateEC2Instance1
        Port: 8080
      - Id:
          Ref: XEnvPrivateEC2Instance2
        Port: 8080
      VpcId:
        Ref: XEnvVPC
  XEnvAppLoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref XEnvVPC
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
Outputs:
  LoadBalancer:
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - XEnvAppLoadBalancer
          - DNSName
    Description: Load Balancer URL
